tests/indexer/indexer.exp
Error: A.js:13
 13:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 12: function foo2(): {[key: number]: string} {
                      ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Indexer property key is incompatible:
     13:   return { foo: "bar" }
                  ^^^^^^^^^^^^^^ string `foo`. This type is incompatible with
     12: function foo2(): {[key: number]: string} {
                                 ^^^^^^ number

Error: A.js:18
 18:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 17: function foo3(): {[key: string]: number} {
                      ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     18:   return { foo: "bar" }
                         ^^^^^ string. This type is incompatible with
     17: function foo3(): {[key: string]: number} {
                                          ^^^^^^ number

Error: A.js:23
 23:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 22: function foo4(): {[key: number]: number} {
                      ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Indexer property key is incompatible:
     23:   return { foo: "bar" }
                  ^^^^^^^^^^^^^^ string `foo`. This type is incompatible with
     22: function foo4(): {[key: number]: number} {
                                 ^^^^^^ number

Error: A.js:23
 23:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 22: function foo4(): {[key: number]: number} {
                      ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     23:   return { foo: "bar" }
                         ^^^^^ string. This type is incompatible with
     22: function foo4(): {[key: number]: number} {
                                          ^^^^^^ number

Error: A.js:38
 38:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 37: function foo7(): {[key: string]: number; foo: number} {
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     38:   return { foo: "bar" }
                         ^^^^^ string. This type is incompatible with
     37: function foo7(): {[key: string]: number; foo: number} {
                                                       ^^^^^^ number

Error: call.js:4
  4: (y: {(number): string});
      ^ object type. This type is incompatible with
  4: (y: {(number): string});
         ^^^^^^^^^^^^^^^^^^ function prototype

Error: call.js:4
  4: (y: {(number): string});
      ^ object type. This type is incompatible with
  4: (y: {(number): string});
         ^^^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      4: (y: {(number): string});
             ^^^^^^^^^^^^^^^^^^ property `$call`. Callable signature not found in
      4: (y: {(number): string});
          ^ object type

Error: multiple.js:7
  7:       [k2: number]: number, // error: not supported (yet)
           ^^^^^^^^^^^^^^^^^^^^ multiple indexers are not supported

Error: variance.js:5
  5: (w[0]: number); //ng
      ^^^^ computed property. Contravariant indexer property value incompatible with covariant use in
  5: (w[0]: number); //ng
      ^^^^ computed property

Error: variance.js:8
  8: w[null] = 3; //ng
       ^^^^ null. This type is incompatible with
  8: w[null] = 3; //ng
     ^^^^^^^ union: number | string
  Member 1:
    2:   -[number | string]: number
           ^^^^^^ number
  Error:
    8: w[null] = 3; //ng
         ^^^^ null. This type is incompatible with
    2:   -[number | string]: number
           ^^^^^^ number
  Member 2:
    2:   -[number | string]: number
                    ^^^^^^ string
  Error:
    8: w[null] = 3; //ng
         ^^^^ null. This type is incompatible with
    2:   -[number | string]: number
                    ^^^^^^ string

Error: variance.js:15
 15: r[5] = 5.5; //ng
     ^^^^ assignment of computed property/element. Covariant indexer property value incompatible with contravariant use in
 15: r[5] = 5.5; //ng
     ^^^^ assignment of computed property/element

Error: variance.js:16
 16: r["another string"] = 6; //ng
     ^^^^^^^^^^^^^^^^^^^ assignment of computed property/element. Covariant indexer property value incompatible with contravariant use in
 16: r["another string"] = 6; //ng
     ^^^^^^^^^^^^^^^^^^^ assignment of computed property/element

Error: variance.js:17
 17: r[null] = 7; //ng
     ^^^^^^^ assignment of computed property/element. Covariant indexer property value incompatible with contravariant use in
 17: r[null] = 7; //ng
     ^^^^^^^ assignment of computed property/element

Error: variance.js:17
 17: r[null] = 7; //ng
       ^^^^ null. This type is incompatible with
 17: r[null] = 7; //ng
     ^^^^^^^ union: number | string
  Member 1:
   11:   +[number | string]: number
           ^^^^^^ number
  Error:
   17: r[null] = 7; //ng
         ^^^^ null. This type is incompatible with
   11:   +[number | string]: number
           ^^^^^^ number
  Member 2:
   11:   +[number | string]: number
                    ^^^^^^ string
  Error:
   17: r[null] = 7; //ng
         ^^^^ null. This type is incompatible with
   11:   +[number | string]: number
                    ^^^^^^ string

Error: variance.js:26
 26: rw[null] = 11; //ng
        ^^^^ null. This type is incompatible with
 26: rw[null] = 11; //ng
     ^^^^^^^^ union: number | string
  Member 1:
   20:   [number | string]: number
          ^^^^^^ number
  Error:
   26: rw[null] = 11; //ng
          ^^^^ null. This type is incompatible with
   20:   [number | string]: number
          ^^^^^^ number
  Member 2:
   20:   [number | string]: number
                   ^^^^^^ string
  Error:
   26: rw[null] = 11; //ng
          ^^^^ null. This type is incompatible with
   20:   [number | string]: number
                   ^^^^^^ string


Found 15 errors
